Interface Discovery - ID: 3399444
Question about function in HostInfo.java - ID: 3400651
StringIndexOutOfBounds in ServiceInfoImpl.java - ID: 3393338
JmDNS 3.4.1 does not answer to PTR requests on sub-types - ID: 3437695
problem with . in name
Incorrect behavior for a query with non-zero RCODE value - ID: 3451306
Incorrect behavior for packets with inconsistent field size - ID: 3451316
Incorrect response for a query with unknown class  - ID: 3451753

CHANGELOG 24 August 2011 Pierre Frisch
Rev the source code to 3.4.1
unregisterService() prevents subsequent registerService() - ID: 3163605
Sometimes race condition causes to use a canceled timer - ID: 3183116
How should addServiceListener be expected to work? - ID: 3186552
ConcurrentModificationException is possible - ID: 3195594
Registering twice same ServiceInfo blocks - ID: 3195632
Error message on second register - ID: 3195656
ServiceInfoImpl returns invalid IPV6 addresses - ID: 3290692
Queries are sent over IPv4 even when binding to IPv6 address - ID: 3293105
Synchronization issue - ID: 3298376
Synchronization issue - ID: 3301269
NPE is possible - ID: 3390168

CHANGELOG 20 January 2011 Pierre Frisch
Rev the source code to 3.4.0
Android does not support IOException(String, Throwable) - ID: 3110982
Replace dots with dashes in hostname instead of truncating - ID: 3111108
Moved the NetworkTopologyDiscovery into a stand alone class instead of JmmDNS inner class.
OSGi Bundle-RequiredExecutionEnvironment broken - ID: 3111738
JmDNS does not preserve service type case
Remove call to isEmpty (for Android)  - ID: 3113114
Remove package.html - ID: 3112613
Announcer is causing a ServiceType cache flush - ID: 3113073
Can't resolve if txt field is empty - ID: 3123622
TXT Record not updating for getProperty call - ID: 3126952
********* JmDNS is now case preserving, which was the intent all along. Check your code as we JmDNS may return mixed case in instances where it was returning lower case. *********